src/test/ui/deduplicate-diagnostics.duplicate.stderr
error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^

error: cannot find derive macro `Unresolved` in this scope
  --> $DIR/deduplicate-diagnostics.rs:4:10
   |
LL | #[derive(Unresolved)]
   |          ^^^^^^^^^^

error: aborting due to 2 previous errors

